--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 </div>
                 <div>
                     <label for="website">Website</label>
-                    <input type="url" id="website" pattern="^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}$" placeholder="www.website.com">
+                    <input type="text" id="website" pattern="^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}$" placeholder="www.website.com">
                 </div>
             </fieldset>
             <fieldset>
@@ -67,7 +67,7 @@
                 </div>
                 <div>
                     <label for="current-url">Project URL</label>
-                    <input type="url" id="current-url" pattern="^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}$" placeholder="www.website.com">
+                    <input type="text" id="current-url" pattern="^([a-zA-Z0-9]([a-zA-Z0-9\-]{0,61}[a-zA-Z0-9])?\.)+[a-zA-Z]{2,6}$" placeholder="www.website.com">
                 </div>
                 <div>
                     <label for="target-audience">Target Audience</label>
